Week4 과제파일 제출
Feat: Intent를 활용한 앱간 데이터 이동 구현
-Intent를 사용하여 앱간 이동할 때 데이터를 가지고 가게 함
-입력제한 구현

--- a/정의민/Week 3/app/src/main/AndroidManifest.xml
+++ b/정의민/Week 3/app/src/main/AndroidManifest.xml
@@ -13,23 +13,26 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ProfileActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        </activity>
+        <activity
+            android:name=".JoinActivity"
+            android:exported="true">
         </activity>
         <activity
             android:name=".Calculator"
             android:exported="true">
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
