Week 5: 권지윤 과제 제출
Feat: 과제 제출
-ActiveResultLauncher 적용
-Fragment로 데이터 옮기기
-메인액티비티로 이동했을때, MainFragemnt가 화면에 있게 함
-bottomNavigation 가운데 있게 함

--- a/.gitignore
+++ b/.gitignore
@@ -388,3 +388,4 @@ obj/
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/kotlin,macos,windows,intellij,android,androidstudio,git
+권지윤/Week 3/hw1/app/src/main/java/com/jiyoxn/hw/MainActivity.kt
